@@ -1,6 +1,7 @@
 1.3 beta 5
 - Fixed MIDI export when some notes have a volume of 0
 - Spanish translation (thanks to Othyro)
+- Fix double replace confirmation on OSX (Cocoa)
 
 1.3 beta 4
 - Added ability to drag-duplicate notes
